cabal-version:       2.4

name:                strnth
version:             0.1.0.0
synopsis:            yeet²
license:             MIT
license-file:        LICENSE
author:              Speykious
maintainer:          speykious@gmail.com
extra-source-files:  CHANGELOG.md

executable strnth
  main-is:             Main.hs
  build-depends:       base ^>=4.13.0.0
                     , cli, Clipboard
  hs-source-dirs:      src
  default-language:    Haskell2010
